# orxhestra

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: docs.yml  test.yml
.orx/: AGENTS.md
architecture/: index.html
composer/overview/: index.html
concepts/agents/: index.html
concepts/events/: index.html
concepts/invocation-context/: index.html
concepts/runner-sessions/: index.html
docker/: Dockerfile  entrypoint.py
docs/: architecture.md  architecture.mdx  docs.json  examples.md  examples.mdx  index.md  index.mdx  llms-full.txt  llms.txt
docs/.mintlify/: ASSISTANT.md
docs/cli/: commands.mdx  memory.mdx  overview.mdx  themes.mdx
docs/composer/: extending.mdx  overview.md  overview.mdx  schema-reference.mdx
docs/concepts/: agents.md  agents.mdx  events.md  events.mdx  invocation-context.md  invocation-context.mdx  runner-sessions.md  runner-sessions.mdx
docs/getting-started/: installation.md  installation.mdx  quickstart.md  quickstart.mdx
docs/integrations/: a2a.md  a2a.mdx  mcp.md  mcp.mdx
docs/orchestration/: composite-agents.md  composite-agents.mdx  planners.md  planners.mdx  prompts.md  prompts.mdx  skills.md  skills.mdx
docs/runtime/: callbacks.md  callbacks.mdx  human-in-the-loop.md  human-in-the-loop.mdx  providers.mdx  streaming.md  streaming.mdx  structured-output.md  structured-output.mdx  tracing.md  tracing.mdx
docs/stylesheets/: extra.css
docs/tools/: artifacts.mdx  confirmation.md  confirmation.mdx  filesystem.mdx  long-running.md  long-running.mdx  overview.md  overview.mdx  todo.mdx
examples/: a2a_server.py  artifact_tools.py  background_tasks.py  basic_agent.py  database_sessions.py  human_in_the_loop.py  index.html  langfuse_tracing.py  loop_agent.py  mcp_agent.py  memory_agent.py  memory_system.py  multi_agent.py  multi_provider.py  parallel_agent.py  planner_agent.py  react_agent.py  signed_events.py  streaming_agent.py  structured_output.py  task_orchestration.py  thinking_parts.py  tool_confirmation.py  transfer_agent.py
examples/composer/: compose.yaml  run.py  tools.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
integrations/a2a/: index.html
integrations/mcp/: index.html
langchain_adk/: __init__.py  runner.py
langchain_adk/a2a/: server.py
langchain_adk/agents/: __init__.py  base_agent.py  context.py  llm_agent.py  loop_agent.py  parallel_agent.py  react_agent.py  readonly_context.py  run_config.py  sequential_agent.py  tracing.py
langchain_adk/composer/: __init__.py  composer.py  errors.py  schema.py
langchain_adk/planners/: task_board.py  task_planner.py
langchain_adk/tools/: __init__.py  agent_tool.py  filesystem.py  shell.py  tool_context.py  transfer_tool.py
orchestration/composite-agents/: index.html
orchestration/planners/: index.html
orchestration/prompts/: index.html
orchestration/skills/: index.html
orxhestra/: __init__.py  runner.py
orxhestra/a2a/: __init__.py  server.py  signing.py  types.py
orxhestra/agents/: a2a_agent.py  base_agent.py  callbacks.py  invocation_context.py  llm_agent.py  loop_agent.py  message_builder.py  parallel_agent.py  planner_adapter.py  react_agent.py  readonly_context.py  run_config.py  sequential_agent.py  structured_output.py  tool_executor.py  tracing.py
orxhestra/artifacts/: __init__.py  base_artifact_service.py  file_artifact_service.py  in_memory_artifact_service.py
orxhestra/auth/: __init__.py  crypto.py  ssrf.py
orxhestra/cli/: __init__.py  app.py  approval.py  builder.py  builtins.py  commands.py  config.py  context_injection.py  identity.py  ink_app.py  memory.py  models.py  orx.yaml  prompt.py  render.py  repl_app.py  state.py  stream.py  summarization.py  task_tool.py  theme.py  todo_tool.py  writer.py
orxhestra/composer/: __init__.py  composer.py  errors.py  schema.py
orxhestra/errors/: session_not_found_error.py
orxhestra/events/: event.py  event_actions.py  filters.py
orxhestra/filesystem/: __init__.py  base.py  local.py  memory.py
orxhestra/integrations/: __init__.py
orxhestra/memory/: __init__.py  base_memory_service.py  file_memory_service.py  in_memory_service.py  memory.py
orxhestra/middleware/: __init__.py  attestation.py  base.py  callback.py  logging.py  stack.py  trust.py
orxhestra/models/: __init__.py  content_parser.py  llm_request.py  llm_response.py  part.py
orxhestra/planners/: __init__.py  base_planner.py  plan_re_act_planner.py  task_planner.py
orxhestra/prompts/: catalog.py
orxhestra/security/: __init__.py  crypto.py  did.py  token_parser.py
orxhestra/sessions/: __init__.py  base_session_service.py  compaction.py  database_session_service.py  in_memory_session_service.py  session.py
orxhestra/skills/: __init__.py  in_memory_skill_store.py  load_skill_tool.py  loader.py  skill.py  skill_store.py
orxhestra/tools/: __init__.py  agent_tool.py  artifact_tools.py  call_context.py  exit_loop.py  filesystem.py  function_tool.py  human_input.py  long_running_tool.py  memory_tools.py  output.py  shell.py  task_tools.py  (+4 more)
scripts/: generate_brand.py
search/: search_index.json
tests/: test_a2a_signing.py  test_agent_tool.py  test_artifacts.py  test_attestation_local.py  test_attestation_middleware.py  test_auth.py  test_base_agent.py  test_branch_attribution.py  test_cli_identity.py  test_compaction.py  test_composer.py  test_composer_identity.py  test_concurrency.py  test_content_parser.py  test_context.py  test_database_sessions.py  test_did_resolvers.py  test_event_chain.py  test_events.py  test_filesystem_backends.py  test_filesystem_tools_with_backend.py  test_llm_agent.py  test_llm_agent_context_limits.py  test_mcp.py  test_memory.py  test_middleware.py  test_models.py  test_orchestration.py  test_prompts.py  test_react_agent.py  test_readonly_context.py  test_runner.py  test_security.py  test_sessions.py  test_signed_events.py  test_skills.py  test_todo_planner.py  test_todo_tools_api.py  test_tools.py  test_tracing.py  (+1 more)
web/: index.html  og-image.html
(+76 files in other folders)
