[project]
name = "langchain-adk"
version = "0.3.5"
description = "A LangChain-powered Agent Development Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nicolai Lassen"},
]
dependencies = [
    "langchain>=1.2.12",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
a2a = ["fastapi>=0.115.0"]
openai = ["langchain-openai>=1.1.11"]
anthropic = ["langchain-anthropic>=0.3.0"]
google = ["langchain-google-genai>=2.1.0"]
mcp = ["fastmcp>=2.0.0"]

[project.urls]
Homepage = "https://github.com/NicolaiLassen/langchain-adk"
Repository = "https://github.com/NicolaiLassen/langchain-adk"
Issues = "https://github.com/NicolaiLassen/langchain-adk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_adk*"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "build>=1.4.0",
    "twine>=6.2.0",
    "langchain-openai>=1.1.11",
    "langfuse>=4.0.0",
    "mkdocs-material>=9.7.5",
    "mkdocs-mermaid2-plugin>=1.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
